test/files/pos/t9552/t9552a.scala

package object p {
  type Foo = Int
}
