test/files/neg/macro-deprecate-dont-touch-backquotedidents/Macros_Type_3.scala
object Test3 {
  type `macro` = Int
}